--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 permalink: /404.html
 ---
-# ```diff Error 404 - page not found ```
+# Error 404 - page not found
 Would you like to check the spelling of the URL?<br />  
 
 [Back to home](https://ys-314.github.io/)
